5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1674_1105.log
== TEST (2019-04-25 11:50:43) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


elif(x==lobo):
   y = "Stark"
elif(x==leao):
   y = "Lannister"
elif(x==veado):
   y = "Baratheon"
elif(x==dragao):
   y = "Targaryen"
elif(x==rosa):
   y = "Tyrell"
elif(x==sol):
   y = "Martell"
elif(x==lula):
   y = "Greyjoy"
elif(x==esfolado):
   y = "Bolton"
elif(x==turta):
   y = "Tully"

	
print("casa: ", y)

-- ERROR:
File "XXXX", line 5
    elif(x==lobo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:08) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x==lobo):
   y = "Stark"
elif(x==leao):
   y = "Lannister"
elif(x==veado):
   y = "Baratheon"
elif(x==dragao):
   y = "Targaryen"
elif(x==rosa):
   y = "Tyrell"
elif(x==sol):
   y = "Martell"
elif(x==lula):
   y = "Greyjoy"
elif(x==esfolado):
   y = "Bolton"
elif(x==turta):
   y = "Tully"

	
print("casa: ", y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:16) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("casa: ", y)

-- OUTPUT:
Entrada:  lula
casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:24) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("casa: ", y)

-- EXECUTION TIME:
0.147757
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:31) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("casa: ", y)

-- OUTPUT:
Entrada:  lula
casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:46) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("Casa: ", y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:52) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("Casa: ", y)

-- EXECUTION TIME:
0.217507
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:04) 
-- CODE:
x = input( "digite o brasao" ).lower()
print("Entrada: ",x)


if(x=="lobo"):
   y = "Stark"
elif(x=="leao"):
   y = "Lannister"
elif(x=="veado"):
   y = "Baratheon"
elif(x=="dragao"):
   y = "Targaryen"
elif(x=="rosa"):
   y = "Tyrell"
elif(x=="sol"):
   y = "Martell"
elif(x=="lula"):
   y = "Greyjoy"
elif(x=="esfolado"):
   y = "Bolton"
elif(x=="turta"):
   y = "Tully"

	
print("Casa: ", y)

-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:07:25) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "casa: Lannister"
elif(brasao=="veado"):
	x = "casa: Baratheon"
elif(brasao=="dragao"):
	x = "casa: Targaryen"
elif(brasao=="rosa"):
	x = "casa: Tyrell"
elif(brasao=="sol"):
	x = "casa: Martell"
elif(brasao=="lula"):
	x = "casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "casa: Bolton"
elif(brasao=="turta"):
	x = "casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:11) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "casa: Lannister"
elif(brasao=="veado"):
	x = "casa: Baratheon"
elif(brasao=="dragao"):
	x = "casa: Targaryen"
elif(brasao=="rosa"):
	x = "casa: Tyrell"
elif(brasao=="sol"):
	x = "casa: Martell"
elif(brasao=="lula"):
	x = "casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "casa: Bolton"
elif(brasao=="turta"):
	x = "casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.146319
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:08:28) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "casa: Lannister"
elif(brasao=="veado"):
	x = "casa: Baratheon"
elif(brasao=="dragao"):
	x = "casa: Targaryen"
elif(brasao=="rosa"):
	x = "casa: Tyrell"
elif(brasao=="sol"):
	x = "casa: Martell"
elif(brasao=="lula"):
	x = "casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "casa: Bolton"
elif(brasao=="turta"):
	x = "casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:09:10) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.161646
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:09:12) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:09:21) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.189483
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:10:32) 
-- CODE:
brasao = input("digite o brasao: ").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:10:54) 
-- CODE:
brasao = input("digite o brasao:").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:11:13) 
-- CODE:
brasao = input("digite o brasao:").lower()
print("Entrada:",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.114599
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:11:18) 
-- CODE:
brasao = input("digite o brasao:").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.222272
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:11:35) 
-- CODE:
brasao = input("digite o brasao:").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	casa = "Brasao invalido"
print(x)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:15) 
-- CODE:
brasao = input("digite o brasao:").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	x = "casa: Stark"
elif(brasao=="leao"):
	x = "Casa: Lannister"
elif(brasao=="veado"):
	x = "Casa: Baratheon"
elif(brasao=="dragao"):
	x = "Casa: Targaryen"
elif(brasao=="rosa"):
	x = "Casa: Tyrell"
elif(brasao=="sol"):
	x = "Casa: Martell"
elif(brasao=="lula"):
	x = "Casa: Greyjoy"
elif(brasao=="esfolado"):
	x = "Casa: Bolton"
elif(brasao=="turta"):
	x = "Casa: Tully"
else:
	x = "Brasao invalido"
print(x)

-- EXECUTION TIME:
0.136843
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
